--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title></title>
+		<title>我的网站</title>
 		<link rel="stylesheet" type="text/css" href="styles/index.css"/>
 		<script src="scripts/moveElement.js"></script>
 	</head>
