--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
 							</div>
 						</li>
 					</ul>
-					<div></div>
+					<div id="list_body_info">
+						<ul>
+							<li><span class="tel left"></span><div>18004795058<br>18618370568</div></li>
+							<li><span class="address left"></span><div>中国北京市某某区某某大街X号XXX</div></li>
+							<li><span class="email left"></span><div>ximengsunyichen@sina.com<br>18004795058@163.com</div></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div id="nav_head">
@@ -63,9 +69,8 @@
 			</div>
 			<div id="call_me">
 				<ul>
-					<li><a href="#">github</a></li>
-					<li><a href="#">weibo</a></li>
-					<li><a href="#">email</a></li>
+					<li><a href="https://github.com/MoreFunGuy" id="github"></a></li>
+					<li><a href="http://weibo.com/2658446207/profile?rightmod=1&wvr=6&mod=personinfo" id="weibo"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -99,18 +104,73 @@
 				</div>
 			</div>
 			<div id="content_bottom">
-				<div id="c_b_technology" class="c_b"></div>
+				<div id="c_b_technology" class="c_b">
+					<div id="c_b_t_header">
+						<h2 class="left">技术文贴</h2>
+						<div id="changePage_btn" class="right">
+							<ul>
+								<li><span class="cp_btn_hover"></span></li>
+								<li><span></span></li>
+								<li><span></span></li>
+							</ul>
+						</div>
+					</div>
+					<div id="c_b_t_content">
+						<ul>
+							<li><span class="left"></span><b class="left"><a  href="#">由浅入深学习前端的推荐书籍...</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#">github pages挂在网页及绑定域名的方法...</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#">一些实用的前端技术帮助文档...</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#">一览CSS布局标准（摘自Kejun's Blog）</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#">一览CSS布局标准（摘自Kejun's Blog）</a></b></li>
+						</ul>
+					</div>
+				</div>
 				<div id="c_b_somthings" class="c_b">
-					<div id="interset"></div>
+					<div id="interest">
+						<h2>杂七杂八儿</h2>
+						<ul>
+							<li>
+								<div class="interset_header">
+									<span id="spiderMan" class="left"></span>	
+									<div id="mdspiderMan" class="interest_md_pic"></div>
+									<h4>《超凡蜘蛛侠2》</h4>
+								</div>	
+								<div id="interset_content">									
+									<p>《超凡蜘蛛侠2》改编自漫威超级英雄漫画，为《超凡蜘蛛侠》的续集，由马克·韦布执导，安德鲁·加菲尔德，艾玛·斯通，杰米·福克斯，戴恩·德哈恩等主演...<a href="#">查看更多>></a></p>
+								</div>	
+							</li>
+							<li>
+								<div class="interset_header">
+									<span id="madilyn" class="left"></span>
+									<div id="mdmadilyn" class="interest_md_pic"></div>
+									<h4>Madilyn Bailey</h4>
+								</div>		
+								<div>
+									<p>Madilyn Bailey是一位来自美国的歌手，靠网络翻唱走红。从小喜爱音乐并且会钢琴、吉他、架子鼓等乐器。其声线极富磁性，受到很多人的好评...<a href="#">查看更多>></a></p>
+								</div>
+							</li>
+							<li>
+								<div class="interset_header">
+									<span id="byx" class="left"></span>
+									<div id="mdbyx" class="interest_md_pic"></div>
+									<h4>《白夜行》</h4>
+								</div>	
+								<div>
+									<p>《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开。1973年，大阪的一栋废弃建筑内发现了一具男尸，此后19年，嫌疑人之女雪穗与被害者之子桐原亮司走上截然不同的人生道路...<a href="#">查看更多>></a></p>
+								</div>
+							</li>
+						</ul>
+					</div>
 					<div id="callMeBy"></div>
 				</div>
-			</div>
-			
+			</div>	
 		</div>
 		
 		
 		
 		<div id="footer">
+			<br><br>
+			<br><br>
 			<br><br>
 		</div>
 		<script src="scripts/index.js"></script>
