change the video preload

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</div>
 			<div id="content_middle">
 				<div id="content_clndr" class="md_content">
-					<video width="300px" height="300px" controls poster="images/video_pic.gif" preload="metadata">
+					<video width="300px" height="300px" controls poster="images/video_pic.gif" preload="none">
 						<source src="videos/video1.mp4"/>
 					</video>
 				</div>
