--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 			</div>
 			<div id="nav_head">
 				<ul>
-					<li><a href="#">首页</a></li>
-					<li><a href="#">简历</a></li>
+					<li><a href="http://www.syc1992.com/index">首页</a></li>
+					<li><a href="pages/resume.html">简历</a></li>
 					<li>
-					<a href="#">作品</a>
+					<a href="pages/works.html">作品</a>
 					</li>
-					<li><a href="#">IT技术</a></li>
-					<li><a href="#">闲谈</a></li>
+					<li><a href="pages/IT_technology.html">IT技术</a></li>
+					<li><a href="pages/something.html">闲谈</a></li>
 				</ul>
 			</div>
 			<div id="call_me">
