--- a/index.html
+++ b/index.html
@@ -9,40 +9,40 @@
 	<body>
 		<div id="header">
 			<div id="list_parent">
-				<div id="list_head"></div>
+				<div id="list_head" class="trans"></div>
 				<div id="list_body">
 					<ul>
 						<li class="list_body_parent">
-							<div class="list_body_head">简历</div>
+							<div class="list_body_head trans">简历</div>
 						</li>
 						<li class="list_body_parent">
-							<div class="list_body_head">作品</div>
-							<div class="list_body_body" id="works">
+							<div class="list_body_head trans">作品</div>
+							<div class="list_body_body trans" id="works">
 								<ul>
-									<li><a href="#">别踩白块</a></li>
-									<li><a href="#">2048</a></li>
-									<li><a href="#">轮播图</a></li>
+									<li><a href="#" class="trans">别踩白块</a></li>
+									<li><a href="#" class="trans">2048</a></li>
+									<li><a href="#" class="trans">轮播图</a></li>
 								</ul>
 							</div>
 						</li>
 						<li class="list_body_parent">
-							<div class="list_body_head">IT技术</div>
-							<div class="list_body_body" id="IT_technology">
+							<div class="list_body_head trans">IT技术</div>
+							<div class="list_body_body trans" id="IT_technology">
 								<ul>
-									<li><a href="#">HTML</a></li>
-									<li><a href="#">CSS</a></li>
-									<li><a href="#">JavaScript</a></li>
-									<li><a href="#">jQuery</a></li>
+									<li><a href="#" class="trans">HTML</a></li>
+									<li><a href="#" class="trans">CSS</a></li>
+									<li><a href="#" class="trans">JavaScript</a></li>
+									<li><a href="#" class="trans">jQuery</a></li>
 								</ul>
 							</div>
 						</li>
 						<li class="list_body_parent">
-							<div class="list_body_head">闲谈</div>
-							<div class="list_body_body" id="something">
+							<div class="list_body_head trans">闲谈</div>
+							<div class="list_body_body trans" id="something">
 								<ul>
-									<li><a/ href="#">音乐</a></li>
-									<li><a/ href="#">电影</a></li>
-									<li><a/ href="#">书</a></li>
+									<li><a/ href="#" class="trans">音乐</a></li>
+									<li><a/ href="#" class="trans">电影</a></li>
+									<li><a/ href="#" class="trans">书</a></li>
 								</ul>
 							</div>
 						</li>
@@ -58,13 +58,13 @@
 			</div>
 			<div id="nav_head">
 				<ul>
-					<li><a href="http://www.syc1992.com/index">首页</a></li>
-					<li><a href="pages/resume.html">简历</a></li>
+					<li><a href="http://www.syc1992.com/index" class="trans">首页</a></li>
+					<li><a href="pages/resume.html" class="trans">简历</a></li>
 					<li>
-					<a href="pages/works.html">作品</a>
+					<a href="pages/works.html" class="trans">作品</a>
 					</li>
-					<li><a href="pages/IT_technology.html">IT技术</a></li>
-					<li><a href="pages/something.html">闲谈</a></li>
+					<li><a href="pages/IT_technology.html" class="trans">IT技术</a></li>
+					<li><a href="pages/something.html" class="trans">闲谈</a></li>
 				</ul>
 			</div>
 			<div id="call_me">
@@ -77,8 +77,8 @@
 		<div id="content">
 			<div id="rotation">
 				<div id="bg_pic"><img id="bg_pic_img"src="images/rotation/bg_all.png"></div>
-				<span class="bt_l"></span>
-				<span class="bt_r"></span>
+				<span class="bt_l trans"></span>
+				<span class="bt_r trans"></span>
 			</div>
 			<div id="content_middle">
 				<div id="content_clndr" class="md_content">
@@ -93,18 +93,18 @@
 						姓名：孙忆晨<br>
 						年龄：23岁<br>
 						学历：全日制本科<br>
-						能力：HTML&CSS,JavaScript, jQuery...<a href="#">查看更多>></a><br>
+						能力：HTML&CSS,JavaScript, jQuery...<a href="pages/resume.html" class="trans">查看更多>></a><br>
 					</p>
 				</div>
 				<div id="content_works" class="md_content">
 					<h1>作品展示<h1>
 					<p>
-						<a href="#">别踩白块</a><br>
-						<a href="#">2048</a><br>
-						<a href="#">轮播图</a><br>
+						<a href="#" class="trans">别踩白块</a><br>
+						<a href="#" class="trans">2048</a><br>
+						<a href="#" class="trans">轮播图</a><br>
 					</p>
 					<br>
-					<span><a href=""><img src="images/content_works_btn.gif"/></a></span>
+					<span><a href="pages/works.html"><img src="images/content_works_btn.gif"/></a></span>
 				</div>
 			</div>
 			<div id="content_bottom">
@@ -121,11 +121,11 @@
 					</div>
 					<div id="c_b_t_content">
 						<ul>
-							<li><span class="left"></span><b class="left"><a  href="#">由浅入深学习前端的推荐书籍...</a></b></li>
-							<li><span class="left"></span><b class="left"><a  href="#">github pages挂在网页及绑定域名的方法...</a></b></li>
-							<li><span class="left"></span><b class="left"><a  href="#">一些实用的前端技术帮助文档...</a></b></li>
-							<li><span class="left"></span><b class="left"><a  href="#">一览CSS布局标准（摘自Kejun's Blog）</a></b></li>
-							<li><span class="left"></span><b class="left"><a  href="#">一览CSS布局标准（摘自Kejun's Blog）</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#" class="trans">由浅入深学习前端的推荐书籍...</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#" class="trans">github pages挂在网页及绑定域名的方法...</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#" class="trans">一些实用的前端技术帮助文档...</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#" class="trans">一览CSS布局标准（摘自Kejun's Blog）</a></b></li>
+							<li><span class="left"></span><b class="left"><a  href="#" class="trans">一览CSS布局标准（摘自Kejun's Blog）</a></b></li>
 						</ul>
 					</div>
 				</div>
@@ -140,7 +140,7 @@
 									<h4>《超凡蜘蛛侠2》</h4>
 								</div>	
 								<div id="interset_content">									
-									<p>《超凡蜘蛛侠2》改编自漫威超级英雄漫画，为《超凡蜘蛛侠》的续集，由马克·韦布执导，安德鲁·加菲尔德，艾玛·斯通，杰米·福克斯，戴恩·德哈恩等主演...<a href="#">查看更多>></a></p>
+									<p>《超凡蜘蛛侠2》改编自漫威超级英雄漫画，为《超凡蜘蛛侠》的续集，由马克·韦布执导，安德鲁·加菲尔德，艾玛·斯通，杰米·福克斯，戴恩·德哈恩等主演...<a href="#" class="trans">查看更多>></a></p>
 								</div>	
 							</li>
 							<li>
@@ -150,7 +150,7 @@
 									<h4>Madilyn Bailey</h4>
 								</div>		
 								<div>
-									<p>Madilyn Bailey是一位来自美国的歌手，靠网络翻唱走红。从小喜爱音乐并且会钢琴、吉他、架子鼓等乐器。其声线极富磁性，受到很多人的好评...<a href="#">查看更多>></a></p>
+									<p>Madilyn Bailey是一位来自美国的歌手，靠网络翻唱走红。从小喜爱音乐并且会钢琴、吉他、架子鼓等乐器。其声线极富磁性，受到很多人的好评...<a href="#" class="trans">查看更多>></a></p>
 								</div>
 							</li>
 							<li>
@@ -160,17 +160,17 @@
 									<h4>《白夜行》</h4>
 								</div>	
 								<div>
-									<p>《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开。1973年，大阪的一栋废弃建筑内发现了一具男尸，此后19年，嫌疑人之女雪穗与被害者之子桐原亮司走上截然不同的人生道路...<a href="#">查看更多>></a></p>
+									<p>《白夜行》是日本作家东野圭吾的代表作，故事围绕着一对有着不同寻常情愫的小学生展开。1973年，大阪的一栋废弃建筑内发现了一具男尸，此后19年，嫌疑人之女雪穗与被害者之子桐原亮司走上截然不同的人生道路...<a href="#" class="trans">查看更多>></a></p>
 								</div>
 							</li>
 						</ul>
 					</div>
 					<div id="callMeBy">
 						<form>
-							<input type="text" value="Your Name..." class="name "/>
-							<input type="text" value="Your github..." class="github "/>
-							<input type="text" value="Your Email..." class="email right"/>
-							<textarea  class="question">Your question...</textarea>
+							<input type="text" value="Your Name..." class="name trans" />
+							<input type="text" value="Your github..." class="github trans"/>
+							<input type="email" value="Your Email..." class="email trans right"/>
+							<textarea  class="question trans" ></textarea>
 							<input type="submit" class="submit right"/>
 						</form>
 					</div>
@@ -197,3 +197,11 @@
 		
 	</body>
 </html>
+
+
+
+
+
+
+
+
