--- a/pages/works.html
+++ b/pages/works.html
@@ -8,40 +8,40 @@
 	<body>
 		<div id="header">
 			<div id="list_parent">
-				<div id="list_head"></div>
+				<div id="list_head" class="trans"></div>
 				<div id="list_body">
 					<ul>
 						<li class="list_body_parent">
-							<div class="list_body_head">简历</div>
+							<div class="list_body_head trans">简历</div>
 						</li>
 						<li class="list_body_parent">
-							<div class="list_body_head">作品</div>
-							<div class="list_body_body" id="works">
+							<div class="list_body_head trans">作品</div>
+							<div class="list_body_body trans" id="works">
 								<ul>
-									<li><a href="#">别踩白块</a></li>
-									<li><a href="#">2048</a></li>
-									<li><a href="#">轮播图</a></li>
+									<li><a href="#" class="trans">别踩白块</a></li>
+									<li><a href="#" class="trans">2048</a></li>
+									<li><a href="#" class="trans">轮播图</a></li>
 								</ul>
 							</div>
 						</li>
 						<li class="list_body_parent">
-							<div class="list_body_head">IT技术</div>
-							<div class="list_body_body" id="IT_technology">
+							<div class="list_body_head trans">IT技术</div>
+							<div class="list_body_body trans" id="IT_technology">
 								<ul>
-									<li><a href="#">HTML</a></li>
-									<li><a href="#">CSS</a></li>
-									<li><a href="#">JavaScript</a></li>
-									<li><a href="#">jQuery</a></li>
+									<li><a href="#" class="trans">HTML</a></li>
+									<li><a href="#" class="trans">CSS</a></li>
+									<li><a href="#" class="trans">JavaScript</a></li>
+									<li><a href="#" class="trans">jQuery</a></li>
 								</ul>
 							</div>
 						</li>
 						<li class="list_body_parent">
-							<div class="list_body_head">闲谈</div>
-							<div class="list_body_body" id="something">
+							<div class="list_body_head trans">闲谈</div>
+							<div class="list_body_body trans" id="something">
 								<ul>
-									<li><a/ href="#">音乐</a></li>
-									<li><a/ href="#">电影</a></li>
-									<li><a/ href="#">书</a></li>
+									<li><a/ href="#" class="trans">音乐</a></li>
+									<li><a/ href="#" class="trans">电影</a></li>
+									<li><a/ href="#" class="trans">书</a></li>
 								</ul>
 							</div>
 						</li>
@@ -57,13 +57,13 @@
 			</div>
 			<div id="nav_head">
 				<ul>
-					<li><a href="http://www.syc1992.com/index">首页</a></li>
-					<li><a href="resume.html">简历</a></li>
+					<li><a href="http://www.syc1992.com/index" class="trans">首页</a></li>
+					<li><a href="resume.html" class="trans">简历</a></li>
 					<li>
-					<a href="works.html">作品</a>
+					<a href="works.html" class="trans">作品</a>
 					</li>
-					<li><a href="IT_technology.html">IT技术</a></li>
-					<li><a href="something.html">闲谈</a></li>
+					<li><a href="IT_technology.html" class="trans">IT技术</a></li>
+					<li><a href="something.html" class="trans">闲谈</a></li>
 				</ul>
 			</div>
 			<div id="call_me">
