--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8"/>
 		<title>我的网站</title>
 		<link rel="stylesheet" type="text/css" href="../styles/index.css"/>
+		<link rel="stylesheet" type="text/css" href="../styles/resume.css">
 	</head>
 	<body>
 		<div id="header">
@@ -73,7 +74,43 @@
 				</ul>
 			</div>
 		</div>
-	
+		<div id="content">
+			<div class="title"></div>
+			<div class="info">
+				<div class="name_job left">
+					<h1>孙忆晨</h1>
+					<h3>前端工程师</h3>
+				</div>
+				<div class="contact_way right">
+					<p>联系方式：</p>
+					<ul>
+						<li><div class="c_w">Mobile Number</div><div class="c_w_info">18004795058</div></li>
+						<li><div class="c_w">github ID</div><div class="c_w_info">MoreFunGuy</div></li>
+						<li><div class="c_w">Email Address</div><div class="c_w_info">18004795058@163.com</div></li>
+					</ul>
+				</div>
+			</div>
+			<div class="detail">
+				<div class="self_intro left">
+					<p class="md_title">个人简介</p>
+					<div>						XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+					</div>
+				</div>
+				<div class="skill right">
+					<p class="md_title">技术能力</p>
+					<ul>
+						<li><span>HTML</span><span class="right"><img src="../images/resume/90persent.jpg"/></span></li>
+						<li><span>CSS</span><span class="right"><img src="../images/resume/90persent.jpg"/></span></li>
+						<li><span>Javascript</span ><span class="right"><img src="../images/resume/80persent.jpg"/></span></li>
+						<li><span>jQuery</span><span class="right"><img src="../images/resume/70persent.jpg"/></span></li>
+						<li><span>Ajax</span><span class="right"><img src="../images/resume/60persent.jpg"/></span></li>
+						<li><span>MySQL</span><span class="right"><img src="../images/resume/20persent.gif"/></span></li>
+						<li><span>PHP</span><span class="right"><img src="../images/resume/35persent.jpg"/></span></li>
+						<li><span>Photoshop</span ><span class="right"><img src="../images/resume/35persent.jpg"/></span></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 		<script src="../scripts/index_another.js"></script>
 	</body>
 </html>
