--- a/pages/resume.html
+++ b/pages/resume.html
@@ -101,7 +101,7 @@
 					<ul>
 						<li><span>HTML</span><span class="right"><img src="../images/resume/90persent.jpg"/></span></li>
 						<li><span>CSS</span><span class="right"><img src="../images/resume/90persent.jpg"/></span></li>
-						<li><span>Javascript</span ><span class="right"><img src="../images/resume/80persent.jpg"/></span></li>
+						<li><span>JavaScript</span ><span class="right"><img src="../images/resume/80persent.jpg"/></span></li>
 						<li><span>jQuery</span><span class="right"><img src="../images/resume/70persent.jpg"/></span></li>
 						<li><span>Ajax</span><span class="right"><img src="../images/resume/60persent.jpg"/></span></li>
 						<li><span>MySQL</span><span class="right"><img src="../images/resume/20persent.gif"/></span></li>
@@ -109,8 +109,35 @@
 						<li><span>Photoshop</span ><span class="right"><img src="../images/resume/35persent.jpg"/></span></li>
 					</ul>
 				</div>
+				<div class="education left">
+					<p class="md_title">教育经历</p>
+					<div class="organization">天津理工大学<span class="during right">2010-2014</span></div>
+					<div class="major">计算机与通信工程学院&nbsp;&nbsp;通信工程专业</div>
+					<div class="description">掌握通信领域内的基本理论和基本知识；掌握光波、无线、多媒体等通信技术；掌握通信系统和通信网的分析与设计方法；具有设计、开发、调测、应用通信系统和通信网的基本能力；了解通信系统和通信网建设的基本方针、政策和法规。</div>
+				</div>
+				<div class="experience right">
+					<p class="md_title">工作经历</p>
+					<div class="organization">大唐高鸿信息技术有限公司<span class="during right">2014至今</span></div>
+					<div class="major">技术支持</div>
+					<div class="description">					参与项目：2014年7月至2015年6月在国家开发银行参与《银团贷款标准》制定及IT落地实施项目，主要负责技术资料的整理，文档中所涉及到主要数据项的整理，及后续与甲方沟通并推进项目的进行与收尾。
+					</div>					
+				</div>
+				<div class="learingLine left">
+					<p class="md_title">技术学习路线</p>	
+					<ul class="timeLine">
+						<li class="num1"><span class="book">《Head First HTML&CSS》<br>开始web开发学习</span><span class="time">2014.11</span></li>
+						<li class="num2"><span class="book">《JavaScript DOM 编程艺术》<br>《精通CSS》初步掌握HTML及<br>CSS，初窥JS</span><span class="time">2014.12</span></li>
+						<li class="num3"><span class="book">《JavaScript高级程序设计》扎实<br>掌握JS基础知识，包括ECMAScript、DOM、BOM</span><span class="time">2015.01</span></li>
+						<li class="num4"><span class="book">《CSS权威指南》、《锋利的<br>jQuery》深刻理解CSS，开始学习jQuery库</span><span class="time">2015.04</span></li>
+						<li class="num5"><span class="book">《JavaScript语言精粹》</span><span class="time">2015.05</span></li>
+						<li class="num6"><span class="book">通过手册学习PHP</span><span class="time">2015.06 </span></li>
+						<li class="num7"><span class="book">《github入门与实践》创建了自<br>己的github账号</span><span class="time">2015.07</span></li>
+						<li class="num8"><span class="book">制作自己的blog 挂在github <br>pages上并绑定域名syc1992<br>.com</span><span class="time">2015.08</span></li>
+					</ul>
+				</div>
 			</div>
 		</div>
+		<br><br>
 		<script src="../scripts/index_another.js"></script>
 	</body>
 </html>
