--- a/pages/IT_technology.html
+++ b/pages/IT_technology.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8"/>
 		<title>我的网站</title>
 		<link rel="stylesheet" type="text/css" href="../styles/index.css"/>
+		<link rel="stylesheet" type="text/css" href="../styles/IT_technology.css">
+		<script src="../scripts/jquery-2.1.4.js"></script>
 	</head>
 	<body>
 		<div id="header">
@@ -73,7 +75,51 @@
 				</ul>
 			</div>
 		</div>
-	
+		<div id="content">
+			<div class="nav left">
+				<ul>
+					<li>
+						<div class="nav_header">分类目录<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">HTML5</a><li>
+								<li><a href="#">CSS</a><li>
+								<li><a href="#">JavaScript</a><li>
+								<li><a href="#">服务器</a><li>
+								<li><a href="#">网络协议</a><li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="nav_header">近期文档<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">由浅入深学习前端的推荐书籍...</a><li>
+								<li><a href="#">github pages挂在网页及绑定域名的方法...</a><li>
+								<li><a href="#">一些实用的前端技术帮助文档...</a><li>
+								<li><a href="#">一览CSS布局标准（摘自Kejun's Blog）</a><li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="nav_header">文档归档<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">2015年8月</a><li>
+								<li><a href="#">2015年7月</a><li>
+								<li><a href="#">2015年6月</a><li>
+								<li><a href="#">2015年5月</a><li>
+								<li><a href="#">2015年4月</a><li>
+							</ul>
+						</div>				
+					</li>
+				</ul>
+			</div>
+			<div class="wrap right">
+			
+			</div>
+		</div>
 		<script src="../scripts/index_another.js"></script>
+		<script src="../scripts/IT_technology.js"></script>
 	</body>
 </html>
