--- a/pages/IT_technology.html
+++ b/pages/IT_technology.html
@@ -82,11 +82,11 @@
 						<div class="nav_header">分类目录<span class="right"></span></div>
 						<div class="nav_body">
 							<ul>
-								<li><a href="#">HTML5</a><li>
-								<li><a href="#">CSS</a><li>
-								<li><a href="#">JavaScript</a><li>
-								<li><a href="#">服务器</a><li>
-								<li><a href="#">网络协议</a><li>
+								<li><a href="#">HTML5</a></li>
+								<li><a href="#">CSS</a></li>
+								<li><a href="#">JavaScript</a></li>
+								<li><a href="#">服务器</a></li>
+								<li><a href="#">网络协议</a></li>
 							</ul>
 						</div>
 					</li>
@@ -94,10 +94,10 @@
 						<div class="nav_header">近期文档<span class="right"></span></div>
 						<div class="nav_body">
 							<ul>
-								<li><a href="#">由浅入深学习前端的推荐书籍...</a><li>
-								<li><a href="#">github pages挂在网页及绑定域名的方法...</a><li>
-								<li><a href="#">一些实用的前端技术帮助文档...</a><li>
-								<li><a href="#">一览CSS布局标准（摘自Kejun's Blog）</a><li>
+								<li><a href="#">由浅入深学习前端的推荐书籍...</a></li>
+								<li><a href="#">github pages挂在网页及绑定域名...</a></li>
+								<li><a href="#">一些实用的前端技术帮助文档...</a></li>
+								<li><a href="#">一览CSS布局标准（摘自Kejun's Blog）</a></li>
 							</ul>
 						</div>
 					</li>
@@ -105,18 +105,21 @@
 						<div class="nav_header">文档归档<span class="right"></span></div>
 						<div class="nav_body">
 							<ul>
-								<li><a href="#">2015年8月</a><li>
-								<li><a href="#">2015年7月</a><li>
-								<li><a href="#">2015年6月</a><li>
-								<li><a href="#">2015年5月</a><li>
-								<li><a href="#">2015年4月</a><li>
+								<li><a href="#">2015年8月</a></li>
+								<li><a href="#">2015年7月</a></li>
+								<li><a href="#">2015年6月</a></li>
+								<li><a href="#">2015年5月</a></li>
+								<li><a href="#">2015年4月</a></li>
 							</ul>
 						</div>				
 					</li>
+					<li id="search"/><input type="text" placeholder="请输入搜索内容"  maxlength="20" class="words"><span></span></li>
 				</ul>
 			</div>
 			<div class="wrap right">
-			
+				<div class="article"></div>
+				<div class="article"></div>
+				<div class="article"></div>
 			</div>
 		</div>
 		<script src="../scripts/index_another.js"></script>
