--- a/pages/something.html
+++ b/pages/something.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8"/>
 		<title>我的网站</title>
 		<link rel="stylesheet" type="text/css" href="../styles/index.css"/>
+		<link rel="stylesheet" type="text/css" href="../styles/works.css"/>
+		<script src="../scripts/jquery-2.1.4.js"></script>
 	</head>
 	<body>
 		<div id="header">
@@ -73,7 +75,45 @@
 				</ul>
 			</div>
 		</div>
-	
+			<div id="content">
+			<div class="nav left">
+				<ul>
+					<li>
+						<div class="nav_header">影视<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">超凡蜘蛛侠</a></li>
+								<li><a href="#">当幸福来敲门</a></li>
+								<li><a href="#">权利的游戏</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="nav_header">音乐<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">Madilyn Bailey</a></li>
+								<li><a href="#">Eminem</a></li>
+								<li><a href="#">Adele</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="nav_header">小说<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">白夜行</a></li>
+								<li><a href="#">悟空传</a></li>
+							</ul>
+						</div>				
+					</li>
+					<li id="search"/><input type="text" placeholder="请输入搜索内容"  maxlength="20" class="words"><span></span></li>
+				</ul>
+			</div>
+			<div class="wrap right">
+			</div>
+		</div>
 		<script src="../scripts/index_another.js"></script>
+		<script src="../scripts/works.js"></script>
 	</body>
 </html>
