--- a/pages/works.html
+++ b/pages/works.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8"/>
 		<title>我的网站</title>
 		<link rel="stylesheet" type="text/css" href="../styles/index.css"/>
+		<link rel="stylesheet" type="text/css" href="../styles/works.css"/>
+		<script src="../scripts/jquery-2.1.4.js"></script>
 	</head>
 	<body>
 		<div id="header">
@@ -73,7 +75,44 @@
 				</ul>
 			</div>
 		</div>
-	
+		<div id="content">
+			<div class="nav left">
+				<ul>
+					<li>
+						<div class="nav_header">JS效果<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">放大镜效果</a></li>
+								<li><a href="#">轮播图</a></li>
+								<li><a href="#">canvas画板</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="nav_header">小游戏<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="#">别踩白块</a></li>
+								<li><a href="#">2048</a></li>
+								<li><a href="#">俄罗斯方块</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="nav_header">优秀神作<span class="right"></span></div>
+						<div class="nav_body">
+							<ul>
+								<li><a href="../works/heart/index.html">Heart</a></li>
+							</ul>
+						</div>				
+					</li>
+					<li id="search"/><input type="text" placeholder="请输入搜索内容"  maxlength="20" class="words"><span></span></li>
+				</ul>
+			</div>
+			<div class="wrap right">
+			</div>
+		</div>
 		<script src="../scripts/index_another.js"></script>
+		<script src="../scripts/works.js"></script>
 	</body>
 </html>
