--- a/pages/resume.html
+++ b/pages/resume.html
@@ -19,7 +19,7 @@
 							<div class="list_body_head trans">作品</div>
 							<div class="list_body_body trans" id="works">
 								<ul>
-									<li><a href="#" class="trans">别踩白块</a></li>
+									<li><a href="works/games/testBlackbox.html" class="trans">别踩白块</a></li>
 									<li><a href="#" class="trans">2048</a></li>
 									<li><a href="#" class="trans">轮播图</a></li>
 								</ul>
