--- a/pages/works.html
+++ b/pages/works.html
@@ -20,7 +20,7 @@
 							<div class="list_body_head trans">作品</div>
 							<div class="list_body_body trans" id="works">
 								<ul>
-									<li><a href="#" class="trans">别踩白块</a></li>
+									<li><a href="works/games/testBlackbox.html" class="trans">别踩白块</a></li>
 									<li><a href="#" class="trans">2048</a></li>
 									<li><a href="#" class="trans">轮播图</a></li>
 								</ul>
@@ -92,7 +92,7 @@
 						<div class="nav_header">小游戏<span class="right"></span></div>
 						<div class="nav_body">
 							<ul>
-								<li><a href="#">别踩白块</a></li>
+								<li><a href="works/games/testBlackbox.html">别踩白块</a></li>
 								<li><a href="#">2048</a></li>
 								<li><a href="#">俄罗斯方块</a></li>
 							</ul>
@@ -102,7 +102,7 @@
 						<div class="nav_header">优秀神作<span class="right"></span></div>
 						<div class="nav_body">
 							<ul>
-								<li><a href="../works/heart/index.html">Heart</a></li>
+								<li><a href="works/heart/index.html">Heart</a></li>
 							</ul>
 						</div>				
 					</li>
