--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<div class="list_body_head trans">作品</div>
 							<div class="list_body_body trans" id="works">
 								<ul>
-									<li><a href="#" class="trans">别踩白块</a></li>
+									<li><a href="pages/works/games/testBlackbox.html" class="trans">别踩白块</a></li>
 									<li><a href="#" class="trans">2048</a></li>
 									<li><a href="#" class="trans">轮播图</a></li>
 								</ul>
@@ -99,7 +99,7 @@
 				<div id="content_works" class="md_content">
 					<h1>作品展示<h1>
 					<p>
-						<a href="#" class="trans">别踩白块</a><br>
+						<a href="pages/works/games/testBlackbox.html" class="trans">别踩白块</a><br>
 						<a href="#" class="trans">2048</a><br>
 						<a href="#" class="trans">轮播图</a><br>
 					</p>
