--- a/pages/IT_technology.html
+++ b/pages/IT_technology.html
@@ -20,7 +20,7 @@
 							<div class="list_body_head trans">作品</div>
 							<div class="list_body_body trans" id="works">
 								<ul>
-									<li><a href="#" class="trans">别踩白块</a></li>
+									<li><a href="works/games/testBlackbox.html" class="trans">别踩白块</a></li>
 									<li><a href="#" class="trans">2048</a></li>
 									<li><a href="#" class="trans">轮播图</a></li>
 								</ul>
@@ -117,7 +117,10 @@
 				</ul>
 			</div>
 			<div class="wrap right">
-				<div class="article"></div>
+				<div class="article">
+					<h1>由浅入深学习前端的推荐书籍</h1>
+					<p></p>
+				</div>
 				<div class="article"></div>
 				<div class="article"></div>
 			</div>
