--- a/pages/IT_technology.html
+++ b/pages/IT_technology.html
@@ -118,13 +118,29 @@
 			</div>
 			<div class="wrap right">
 				<div class="article">
-					<h1>由浅入深学习前端的推荐书籍</h1>
-					<p></p>
+					<h2><a href="#">由浅入深学习前端的推荐书籍</a></h2>
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本文记述了我自学前端走过的路，本着“由浅入深”，“由易到难”的原则，整理出了一套web前端开发入门学习的书单。本人拙见，仅供参考。<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首先我们需要知道什么是web开发，最最基本的网页是怎么构建出来的？用到的技术是什么？这些问题，可以交给《HeadFirst HTML&CSS》这本书来解答。HeadFirst系列书籍被公认为是IT技术最好的入门书籍，通过简单的图表，平易近人的描述，用该书笔者的话就是用人类大脑最易接受的方式让读者轻而易举的了解并大概掌握一门新的技术...<a href="#">查看更多>></a>
+					</p>
 				</div>
-				<div class="article"></div>
-				<div class="article"></div>
+				<div class="article">
+					<h2><a href="#">使用github pages(摘自gitbeijing.com)</a></h2>
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Github Pages 是 github 公司提供的免费的静态网站托管服务，用起来方便而且功能强大，不仅没有空间限制，还可以绑定自己的域名。<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在 <a href="https://pages.github.com/">https://pages.github.com/</a> 首页上可以看到很多用 Github Pages 托管的网站，很漂亮。另外很多非常著名的公司和项目也都用这种方式来搭建网站，如微软和 twitter 的网站，还有谷歌的 Material Design 图标网站。<a href="#">查看更多>></a>
+					</p>
+				</div>
+				<div class="article">
+					<h2><a href="#">一些实用的前端帮助文档</a></h2>
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在学习前端知识以及开发前端项目的时候，难免会有曾经熟知却因久未谋面而生疏的技术片段，这时翻开一本700多页的工具书去查找一番并不是一个明智的选择（毕竟谁也不会每天背着几公斤的书上班），这时一些简明的帮助文档就派上用场了。<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;博主也是一名刚入门级选手，整理的不全，若有补充可邮箱交流。闲话少说，上点干货...<a href="#">查看更多>></a>
+					</p>
+				</div>
 			</div>
 		</div>
+		<br/><br/>
 		<script src="../scripts/index_another.js"></script>
 		<script src="../scripts/IT_technology.js"></script>
 	</body>
