--- a/pages/something.html
+++ b/pages/something.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<title>我的网站</title>
 		<link rel="stylesheet" type="text/css" href="../styles/index.css"/>
-		<link rel="stylesheet" type="text/css" href="../styles/works.css"/>
+		<link rel="stylesheet" type="text/css" href="../styles/somethings.css"/>
 		<script src="../scripts/jquery-2.1.4.js"></script>
 	</head>
 	<body>
@@ -113,6 +113,7 @@
 			<div class="wrap right">
 			</div>
 		</div>
+		<br/><br/>
 		<script src="../scripts/index_another.js"></script>
 		<script src="../scripts/works.js"></script>
 	</body>
