--- a/pages/works/heart/index.html
+++ b/pages/works/heart/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>heart</title>
+<title>MoreFun's Bolg</title>
 <link href="style.css" type="text/css">
 <script src="script.js"></script>
 </head>
