--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>我的网站</title>
+		<title>MoreFun's Bolg</title>
 		<link rel="stylesheet" type="text/css" href="../styles/index.css"/>
 		<link rel="stylesheet" type="text/css" href="../styles/resume.css">
 	</head>
