--- a/pages/works/games/testBlackbox.html
+++ b/pages/works/games/testBlackbox.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>小游戏/别踩白块</title>
+		<title>MoreFun's Bolg</title>
 		<link rel="stylesheet" type="text/css" href="../../../styles/index.css"/>
 		<link rel="stylesheet" type="text/css" href="../../../styles/works.css"/>
 		<style>
