--- a/pages/IT_technology.html
+++ b/pages/IT_technology.html
@@ -128,7 +128,7 @@
 					<h2><a href="#">使用github pages(摘自gitbeijing.com)</a></h2>
 					<p>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Github Pages 是 github 公司提供的免费的静态网站托管服务，用起来方便而且功能强大，不仅没有空间限制，还可以绑定自己的域名。<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在 <a href="https://pages.github.com/">https://pages.github.com/</a> 首页上可以看到很多用 Github Pages 托管的网站，很漂亮。另外很多非常著名的公司和项目也都用这种方式来搭建网站，如微软和 twitter 的网站，还有谷歌的 Material Design 图标网站。<a href="#">查看更多>></a>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在 <a href="https://pages.github.com/">https://pages.github.com/</a> 首页上可以看到很多用 Github Pages 托管的网站，很漂亮。另外很多非常著名的公司和项目也都用这种方式来搭建网站，如微软和 twitter 的网站，还有谷歌的 Material Design 图标网站...<a href="#">查看更多>></a>
 					</p>
 				</div>
 				<div class="article">
