--- a/pages/works/js/biggerGlasses.html
+++ b/pages/works/js/biggerGlasses.html
@@ -6,15 +6,16 @@
 		<link rel="stylesheet" type="text/css" href="../../../styles/index.css"/>
 		<link rel="stylesheet" type="text/css" href="../../../styles/works.css"/>
 		<style>
-			#b_w_box{padding-top:50px;position:relative;}
-			#wrap{ width:400px; height:400px; background:#eee; box-shadow:0 3px 7px #aaa; margin:30px auto; position:relative; overflow:hidden; }
-			#content1 { width:100&; height:400px; position:relative; top:-100px; }
-			.row { width:100%; height:100px;}
-			.block { float:left; height:100px; width:100px; }
-			.box { background:#000;}
-			#score { text-align:center; }
-			#retry{width:70px;height:30px;background:#eee;position:absolute;left:320px;
-			top:540px;border-radius:5px;display:none;font-weight:bold;}
+			#disc{
+				margin-top:50px;
+				margin-left:20px;
+				margin-bottom:30px;
+			}
+			#disc h2{color:#022e63;margin-bottom:20px;}
+			#disc p{color:#898989;};
+			#bigger{}
+			#bigger .sPic{width:200px;height:240px;background:#ccc;margin-left:20px;}
+			#bigger .bPic{width:400px;height:500px;background:#ccc;margin-left:50px;}
 		</style>
 		<script src="../../../scripts/jquery-2.1.4.js"></script>
 	</head>
@@ -121,12 +122,13 @@
 				</ul>
 			</div>
 			<div class="wrap right">
-				<div id="b_w_box">
-					<h1 id="score">0</h1>
-					<div id="wrap">
-						<div id="content1"></div>
-					</div>
-					<button id="retry">重新开始</button>
+				<div id="disc">
+					<h2>电商网站的产品放大效果</h2>
+					<p>将鼠标放在小图片上滑动，右侧会出现产品的大图，更加清晰的看到产品的细节。</p>
+				</div>
+				<div id="bigger">
+					<div class="sPic left"></div>
+					<div class="bPic left"></div>
 				</div>
 			</div>
 		</div>
@@ -134,144 +136,6 @@
 		<script src="../../../scripts/index_another.js"></script>
 		<script src="../../../scripts/works.js"></script>
 		<script>
-		window.onload = function (){
-			var clock = null,
-				num = 0,
-				speed = 2,
-				state = 0;
-
-		//call cRow() function 
-			function init(){
-				for(var i=0; i<4; i++){
-					cRow();
-				};
-
-				$('content1').onclick = function (ev){
-					judge(ev);
-				};
-			};
-			init();
-
-		//judge lose
-			function judge(ev){
-				if(state == 1){
-					alert('game over');
-					return; // not return is continue follow statement
-				};
-				if(ev.target.className.indexOf('box') == -1){
-					fail();
-				}else{
-					score();
-					ev.target.className = 'block';
-					ev.target.parentNode.mark = 1;
-				};
-			};
-
-		//take id 
-			function $(id){
-				return document.getElementById(id);
-			};
-
-			//create div function
-			function cDiv(className){
-				var div = document.createElement('div');
-				div.className = className;
-				return div;
-			};
-
-		//create row include four block
-			function cRow(){
-				var con = $('content1');
-				var oRow = cDiv('row');
-				var classNa = cBox();
-				for (var i=0; i<4; i++){
-					oRow.appendChild(cDiv(classNa[i]));
-				};
-
-				if(con.firstChild == null){
-					con.appendChild(oRow);
-				}else{
-					con.insertBefore(oRow,con.firstChild);
-				};
-			};
-			
-		// create random black box
-			function cBox(){
-				var arr = ['block','block','block','block'];
-				var i = Math.floor(Math.random()*4);
-				arr[i] = 'block box';
-				return arr;
-			};
-
-		//move the box down
-			function mDown(){
-				var con = $('content1');
-				var topValue = parseInt(window.getComputedStyle(con,null)['top']);
-				if(speed + topValue > 0){
-					topValue = 0;
-				}else{
-					topValue += speed;
-				};
-				con.style.top = topValue + 'px';
-
-				if(topValue == 0){
-					cRow();
-					con.style.top = '-100px';
-					remove();
-				} else if( topValue == speed - 100 ){
-					var rows = con.childNodes;  //con.children can also be, that not contain TextNode
-					if( (rows.length == 5) && (rows[rows.length - 1].mark !== 1)){
-					   fail();
-					};
-				};
-			};
-
-		//fail function
-			function fail (){
-				clearInterval(clock);
-				alert('得分：' + num);
-				state = 1;
-				document.getElementById("retry").style.display = "block";
-			};
-
-		//remove con.lastChild
-			function remove(){
-				var con = $('content1');
-				if(con.childNodes.length == 6){
-					con.removeChild(con.lastChild);
-				};
-			};
-
-		// set interval  
-			function start(){
-				clock = window.setInterval(mDown,20); // interval first argument is function declare
-			};
-
-		//score funciton
-			function score (){
-				var score = $('score');
-				score.innerHTML = parseInt(score.innerHTML) + 1;
-				num = parseInt(score.innerHTML) ;
-				if( num % 7 == 0){
-					speedUp();
-				};
-			};
-
-		//speedUp function
-			function speedUp(){
-				speed += 2;
-				if( speed == 20 ){
-					alert('diaobaole');
-				};
-			};
-
-		//start switch
-			start();
-
-		};
-		document.getElementById("retry").onclick = function(){
-			location.reload();
-		}
 		</script>
 	</body>
 </html>
