--- a/pages/works.html
+++ b/pages/works.html
@@ -82,7 +82,7 @@
 						<div class="nav_header">JS效果<span class="right"></span></div>
 						<div class="nav_body">
 							<ul>
-								<li><a href="#">放大镜效果</a></li>
+								<li><a href="works/js/biggerGlasses.html">放大镜效果</a></li>
 								<li><a href="#">轮播图</a></li>
 								<li><a href="#">canvas画板</a></li>
 							</ul>
