--- a/pages/works.html
+++ b/pages/works.html
@@ -110,6 +110,29 @@
 				</ul>
 			</div>
 			<div class="wrap right">
+				<div class="article">
+					<h2><a href="works/js/biggerGlasses.html">放大镜效果</a></h2>
+					<div>
+						<div class="article_pic left bigger"></div>
+						<div class="article_content ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本部分内容为各电商网站（如淘宝、当当等）常见的产品放大效果。通过此功能可以更加清晰的观察产品<br>的细节，以便考量产品性价比等等。本例使用的是原生<br>的JS（也可已使用jQuery库），难点在于需要在小图上加上一个完全透明且与小图等大的蒙版，以便onmous-over事件在整个小图片上都可以执行。另外就是小图与大图之间需要做一个比例转换。此效果技术上并无太大难度，但可以很好的增强用户体验。</div>
+					</div>
+				</div>
+				<div class="article">
+					<h2><a href="works/games/testBlackbox.html">别踩白块</a></h2>
+					<div>
+						<div class="article_pic left whiteBox"></div>
+						<div class="article_content ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别踩白块是前段时间比较流行的一个小游戏。玩家可以随黑色方块的下落对其点击进行消除，消除的越多，黑色方块下落的越快从而难度就越大，根据消除方块的多少计算分数。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本案例使用的是原生JS技术，设置一个大的容器，其中利用Math.random()随机数做出随机出现的黑色方块组，四个一组，均匀下落，设置onclick事件，点击黑色方块消除整个方块组。判断方块组的纵向坐标，当其与容器下边距触碰时游戏结束。
+						</div>
+					</div>
+				</div>
+				<div class="article">
+					<h2><a href="works/heart/index.html">Heart</a></h2>
+					<div>
+						<div class="article_pic left heart"></div>
+						<div class="article_content ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本例是一个纯HTML5 canvas画布绘制的动态心型图，其中所用到的技术有原生JS、jQuery等。眼花缭乱的动态效果中，最复杂的并不是js逻辑，而是相当繁琐的三角函数方程，即通过各种正余弦曲线来绘制。<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;通过本例可以看出，想要做出令人惊叹的canvas动画，真的需要一个好的数学功底。另外也不得不感叹HTML5的功能之强大，简单的moveTo(),lineTo()函数竟能实现如此美妙的画面。
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<br/><br/>
